style.css
/* The Modern CSS Reset by Josh Comeau */
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* 2. Remove default margin */
* {
    margin: 0;
    padding: 0;
}

body {
    /* 4. Add accessible line-height */
    line-height: 1.5;
    /* 5. Improve text rendering */
    -webkit-font-smoothing: antialiased;
    background-color: var(--palegrey);
    overflow-x: hidden;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
    font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
    text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: balance;
}

/*
    10. Create a root stacking context
  */
#root,
#__next {
    isolation: isolate;
}

img {
    width: 100%;
    height: auto;
}

:root {
    --brightGreen: #b8d43a;
    --lightGreen: #D4E653;
    --brightPink: #f4229d;
    --brightRed: #ce023d;
    --darkgrey: #32373c;
    --darkPurple: #5A2D75;
    --deepPurple: #3D1C55;
    --grey: #666666;
    --palegrey: #F6F4F5;
    --phanitasPurple: #8856a3;
    --phanitasYellow: #fcb900;
    --phanitasGreen: #A9CB31;
    --palePurple: #e3d5ec;
    /* soft, airy lavender tone */
    --paleGreen: #d9f0c1;
    /* gentle, minty green */
    --palePink: #f9d6e5;
}

/* Global Styles */

body {
    font-family: "Poppins", sans-serif;
    font-size: 16px;
    color: #3D1C55;
    background-color: var(--palegrey);
    width: 100%;
}

header {
    background-color: var(--phanitasGreen);
    height: 120px;
}

.content-wrapper {
    width: 90%;
    margin: 50px 0;

}

.fade-in {
    opacity: 0;
    transition: opacity 300ms ease-in;
}

.fade-in.appear {
    opacity: 1;
}

.from-left {
    transform: translateX(-50%);
}

.from-right {
    transform: translateX(50%);
}

.from-left,
.from-right {
    transition: transform 400ms ease-in;
}

.from-left.appear,
.from-right.appear {
    transform: translateX(0)
}

/* Nav Styles */
nav {
    height: 100%;
}

.logo {
    width: 100px;
    height: 100px;
}

.nav-header {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    box-shadow: 1px 1px 3px #666666;
}

.side {
    /* ensures side nav takes up the full width & height*/
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--lightGreen);
    display: flex;
    flex-direction: column;
    gap: 1rem;
    transform: translate(-100%);
    transition: 1s;
    box-shadow: 1px 5px 5px #666666;
}

.show-sidebar {
    transform: translate(0);
}

.toggleBtn {
    background-color: transparent;
    border: none;
    cursor: pointer;
    transition: all 0.3s linear;
}

.toggleBtn:hover {
    color: var(--brightPink);
    transform: rotate(90deg);
}

.fa-bars {
    font-size: 2rem;
}

.close-btn {
    width: 40px;
    height: 40px;
    border: none;
    align-self: flex-end;
    background-color: var(--lightGreen);
    color: var(--brightRed);
}

.links {
    list-style: none;
}

li {
    padding: 1rem 0;
}

a {
    text-decoration: none;
    font-weight: 500;
    color: var(--deepPurple)
}

.phone {
    font-weight: 700;
}

.phone a {
    display: inline-block;
    padding: 0.5rem 1rem;
    background-color: var(--brightPink);
    /* Use a standout color */
    color: white;
    font-weight: 700;
    text-decoration: none;
    border-radius: 2rem;
}

.phone a:hover {
    background-color: var(--phanitasPurple);
    /* Slight hover effect */
}

/* Hero Styles */
.hero-area {
    min-height: 500px;
    display: flex;
    justify-content: center;
    background-color: var(--palegrey)
}

h1 {
    font-family: "Hind Madurai", sans-serif;
    font-size: 2.2rem;
    padding-bottom: 1rem;
    color: var(--deepPurple);
}

h2 {
    padding-bottom: .8rem;
}

h3 {
    padding-bottom: 1rem;
}

.hero-text {
    padding-bottom: 2rem;

}

.hero-text>p {
    font-weight: 600;
}

.hero-cta {
    padding: 0.8rem 1rem;
    background-color: var(--brightPink);
    /* Use a standout color */
    color: white;
    font-weight: 700;
    text-decoration: none;
    border-radius: 2rem;
    border: none;
    width: 50%;
    margin-top: 1rem;
    display: block;
    text-align: center;
}

.hero-cta:hover {
    background-color: var(--phanitasPurple);
    /* Slight hover effect */
}

.hero-img,
.about-us-img,
.baby-img,
.toddler-img,
.class3-4-img {
    border-radius: 2rem;
    border: 2px solid var(--brightPink);
    box-shadow: 2px 2px 5px var(--phanitasPurple);
}

.hero-text>p:last-of-type {
    padding-bottom: 1rem;
}

.address {
    font-style: normal;
    padding: .8rem 0;
}

.email {
    color: var(--deepPurple);
    font-weight: 400;
}

.phone-number {
    font-weight: 600;
    color: var(--brightPink);
}


/* About Us Styles */

.long-logo {
    padding-bottom: 2rem;
}

.about-us {
    background-color: var(--phanitasGreen);
    padding: 2rem 0;
    display: flex;
    justify-content: center;
}

.about-us-card {
    padding-bottom: 2rem;
}

.about-us-card>p {
    padding-bottom: 1.5rem;
}

.card-img-alt {
    width: 80px;
    height: 80px;
    border-radius: 50%;
    overflow: hidden;
    margin: -40px auto 10px auto;
    border: 4px solid white;
    background: white;
}

/* Why Us */

.our-goals {
    display: flex;
    flex-direction: column;

}

.why-us-title {
    width: 100%;
    padding: 3rem 0;
    text-align: center;
}

.card-container {
    display: grid;
    grid-template-columns: 1fr;
    /* One column layout */
    gap: 5rem;
    padding: 2rem 0 2rem 0;
    justify-items: center;
}

.card-container>h2 {
    text-align: center;
    padding: 0;
}

.our-goals {
    display: flex;
    justify-content: center;
}

.card-text>h3 {
    text-align: center;
}
/* ... */

